# ironclad-mash

./: Cargo.toml  Dockerfile  Makefile  README.md  check.sh  deny.toml
.cargo/: config.toml
src/: error.rs  main.rs  routes.rs
src/routing/: health.rs  index.rs  login.rs  mod.rs  profile.rs
src/templates/: building_blocks.rs  index.rs  login.rs  mod.rs  profile.rs
