[package]
name = "ironclad-mash"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
maud = "0.27.0"
axum = "0.8.4"
axum-htmx = { version = "0.7.0", features = ["auto-vary"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"

[lints.rust]
dead_code = "allow"
unused_results = "warn"
unused-crate-dependencies = "warn"
arithmetic_overflow = "deny"

[lints.clippy]
checked_conversions = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
integer_division = "warn"
unchecked_duration_subtraction = "warn"
indexing_slicing = "warn"
join_absolute_paths = "warn"
