[package]
name = "ironclad-mash"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
maud = "0.27.0"
axum = { version = "0.8.4", features = ["http2"]}
axum-htmx = { version = "0.7.0", features = ["auto-vary", "serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde_json = "1.0"

[lints.rust]
dead_code = "warn"
unused_results = "warn"
unused-crate-dependencies = "warn"
arithmetic_overflow = "deny"

[lints.clippy]
checked_conversions = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
integer_division = "warn"
arithmetic_side_effects = "warn"
unchecked_duration_subtraction = "warn"
indexing_slicing = "warn"
join_absolute_paths = "warn"
unwrap_used = "warn"
expect_used = "warn"
panicking_unwrap = "warn"
option_env_unwrap = "warn"
serde_api_misuse = "warn"
uninit_vec = "warn"
transmute_int_to_char = "warn"
transmute_int_to_float = "warn"
transmute_ptr_to_ref = "warn"
transmute_undefined_repr = "warn"
